Archive2/1f/561237c36f1754/output
main.cpp: In function 'int main()':
main.cpp:22:16: error: invalid initialization of reference of type 'B&&' from expression of type 'A'
  B&&      br(ar);            // 3. error: no viable conversion from A to B
                ^
main.cpp:27:26: error: call of overloaded 'B(std::remove_reference<A&>::type)' is ambiguous
  B        cm(std::move(a));  // 7. error: call to constructor of B ambiguous
                          ^
main.cpp:27:26: note: candidates are:
main.cpp:10:8: note: constexpr B::B(const B&)
 struct B {};
        ^
main.cpp:10:8: note: constexpr B::B(B&&)
main.cpp:28:17: error: call of overloaded 'B(A)' is ambiguous
  B        ct(A{});           // 8. error: call to constructor of B ambiguous
                 ^
main.cpp:28:17: note: candidates are:
main.cpp:10:8: note: constexpr B::B(const B&)
 struct B {};
        ^
main.cpp:10:8: note: constexpr B::B(B&&)
main.cpp:29:16: error: call of overloaded 'B(A&)' is ambiguous
  B        cr(ar);            // 9. OK
                ^
main.cpp:29:16: note: candidates are:
main.cpp:10:8: note: constexpr B::B(const B&)
 struct B {};
        ^
main.cpp:10:8: note: constexpr B::B(B&&)
main.cpp:20:11: warning: unused variable 'bm' [-Wunused-variable]
  B&&      bm(std::move(a));  // 1. OK
           ^
main.cpp:21:11: warning: unused variable 'bt' [-Wunused-variable]
  B&&      bt(A{});           // 2. OK
           ^
main.cpp:22:11: warning: unused variable 'br' [-Wunused-variable]
  B&&      br(ar);            // 3. error: no viable conversion from A to B
           ^
main.cpp:23:11: warning: unused variable 'bl' [-Wunused-variable]
  B&       bl(al);            // 4. OK
           ^
main.cpp:24:11: warning: unused variable 'bz' [-Wunused-variable]
  const B& bz(al);            // 5. OK
           ^
main.cpp:25:11: warning: unused variable 'bc' [-Wunused-variable]
  const B& bc(ac);            // 6. OK
           ^
